--- a/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/bin/Register.html
+++ b/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/bin/Register.html
@@ -2,17 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Airlines</title>
+    <title>Register</title>
     <link rel="stylesheet" href="MainStyle.css">
 </head>
 <body>
     <div class="menu">
         <a href="Index.html">Flights</a>
-        <a href="Airlines.html">Airlines</a>
         <a href="Register.html">Register</a>
         <a href="Login.html">Log in</a>
     </div>
-    <br/>
-    <h1>Airlines</h1>
+    <br />
+    <h1>Register</h1>
 </body>
 </html>
