--- a/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Register.html
+++ b/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Register.html
@@ -3,7 +3,73 @@
 <head>
     <meta charset="utf-8" />
     <title>Register</title>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="MainStyle.css">
+    <script>
+        $(document).ready(function () {
+            $(".datepicker").datepicker({
+                dateFormat: 'dd/mm/yy',
+                defaultDate: new Date(2000, 0, 1)
+            });
+
+            $('#registerForm').submit(function (event) {
+                event.preventDefault();
+
+                const user = {
+                    Username: $('#username').val(),
+                    Password: $('#password').val(),
+                    FirstName: $('#firstName').val(),
+                    LastName: $('#lastName').val(),
+                    Email: $('#email').val(),
+                    DateOfBirth: $('#dateOfBirth').val(),
+                    Gender: $('input[name="gender"]:checked').val()
+                };
+
+                console.log("User data to be sent:", user);
+
+                $.ajax({
+                    url: '/api/users',
+                    method: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify(user),
+                    success: function (data) {
+                        alert('Registration successful!');
+                        window.location.href = 'Index.html';
+                    },
+                    error: function (xhr) {
+                        const errorMessage = xhr.responseText || 'Registration failed!';
+                        console.error("Error response:", errorMessage);
+                        alert(errorMessage);
+                    }
+                });
+            });
+
+            $('#username').on('blur', function () {
+                const username = $(this).val();
+                if (username.length === 0) {
+                    $('#usernameError').text('');
+                    return;
+                }
+
+                $.ajax({
+                    url: `/api/users/${username}`,
+                    method: 'GET',
+                    success: function () {
+                        $('#usernameError').text('Username already exists.');
+                    },
+                    error: function (xhr) {
+                        if (xhr.status === 404) {
+                            $('#usernameError').text('');
+                        } else {
+                            $('#usernameError').text('Error checking username.');
+                        }
+                    }
+                });
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="menu">
@@ -13,5 +79,40 @@
     </div>
     <br />
     <h1>Register</h1>
+    <form id="registerForm" style="margin-left:20px">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+        <span id="usernameError" class="error"></span>
+        <br><br>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+        <br><br>
+
+        <label for="firstName">First Name:</label>
+        <input type="text" id="firstName" name="firstName" required>
+        <br><br>
+
+        <label for="lastName">Last Name:</label>
+        <input type="text" id="lastName" name="lastName" required>
+        <br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <br><br>
+
+        <label for="dateOfBirth">Date of Birth:</label>
+        <input type="text" id="dateOfBirth" name="dateOfBirth" class="datepicker" required>
+        <br><br>
+
+        <label>Gender:</label>
+        <input type="radio" id="male" name="gender" value="Male" required>
+        <label for="male">Male</label>
+        <input type="radio" id="female" name="gender" value="Female" required>
+        <label for="female">Female</label>
+        <br><br>
+
+        <input type="submit" value="Register">
+    </form>
 </body>
 </html>
