--- a/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/bin/Login.html
+++ b/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/bin/Login.html
@@ -2,42 +2,33 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Log in</title>
+    <title>Login</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" href="MainStyle.css">
     <script>
         $(document).ready(function () {
-            $('#loginForm').submit(function (event) {
-                event.preventDefault();
+            $('#loginForm').submit(function (e) {
+                e.preventDefault();
 
-                const username = $('#username').val();
-                const password = $('#password').val();
+                var username = $('#username').val();
+                var password = $('#password').val();
 
                 $.ajax({
-                    url: `/api/users/${username}`,
-                    method: 'GET',
+                    url: `/api/users/login/${username}`,
+                    method: "GET",
                     success: function (user) {
-                        console.log('Success: ', user);
-
-                        if (user !== null && user !== undefined) {
-                            if (user.password == password) {
-                                console.log('Login successful!');
-                                alert('Login successful!');
-                                // Redirect to the starting page after successful login
-                                window.location.href = 'Index.html';
-                            } else {
-                                $('#passwordError').text('Incorrect password.');
-                            }
+                        if (user.password === password) {
+                            alert('Logged in successfully.');
+                            window.location.href = "Index.html";
                         } else {
-                            $('#usernameError').text("Username doesn't exist.");
+                            $('#passwordError').text('Incorrect password.');
                         }
                     },
                     error: function (xhr) {
-                        console.error('Error response:', xhr);
                         if (xhr.status === 404) {
                             $('#usernameError').text("Username doesn't exist.");
                         } else {
-                            console.error('Login failed:', xhr.responseText || 'Unknown error.');
+                            alert('Error logging in. Please try again.');
                         }
                     }
                 });
@@ -45,7 +36,6 @@
 
             $('#username').on('input', function () {
                 $('#usernameError').text('');
-                $('#passwordError').text('');
             });
 
             $('#password').on('input', function () {
@@ -61,7 +51,7 @@
         <a href="Login.html">Log in</a>
     </div>
     <br />
-    <h1>Log in</h1>
+    <h1>Login</h1>
     <form id="loginForm" style="margin-left:20px">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
