--- a/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Profile.html
+++ b/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Profile.html
@@ -4,42 +4,133 @@
     <meta charset="utf-8" />
     <title>Profile</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="MainStyle.css">
+    <style>
+        .error {
+            color: red;
+            font-size: 12px;
+        }
+    </style>
     <script>
         $(document).ready(function () {
-            $.ajax({
-                url: '/api/users/currentuser',
-                method: 'GET',
-                success: function (user) {
-                    document.title = `${user.username}'s Profile`;
-                    $('#profileTitle').text(`${user.username} (${user.firstName} ${user.lastName})`);
-                    $('#email').text(`Email: ${user.email}`);
-                    $('#dob').text(`Date of Birth: ${user.dateOfBirth}`);
-                    $('#gender').text(`Gender: ${user.gender}`);
-                    $('#type').text(`User type: ${user.userType}`);
-                    $('#profileInfo').show();
-                    $('#loadingMessage').hide();
-                },
-                error: function (xhr) {
-                    console.error(`Failed to load profile: ${xhr.responseText}`);
-                    alert(`Failed to load profile: ${xhr.responseText}`);
-                    window.location.href = 'Login.html';
-                }
-            });
+            function loadProfile() {
+                $.ajax({
+                    url: '/api/users/currentuser',
+                    method: 'GET',
+                    success: function (user) {
+                        document.title = `${user.username}'s Profile`;
+                        $('#profileTitle').text(`${user.username} (${user.firstName} ${user.lastName})`);
+                        $('#email').text(`Email: ${user.email}`);
+                        $('#dob').text(`Date of Birth: ${user.dateOfBirth}`);
+                        $('#gender').text(`Gender: ${user.gender}`);
+                        $('#type').text(`User type: ${user.userType}`);
+                        $('#profileInfo').show();
+                        $('#loadingMessage').hide();
+
+                        $('#editUsername').val(user.username);
+                        $('#editUsername').attr('data-current-username', user.username); 
+                        $('#editPassword').val(user.password);
+                        $('#editFirstName').val(user.firstName);
+                        $('#editLastName').val(user.lastName);
+                        $('#editEmail').val(user.email);
+                        $('#editDateOfBirth').val(user.dateOfBirth);
+                        $('input[name="editGender"][value="' + user.gender + '"]').prop('checked', true);
+                    },
+                    error: function (xhr) {
+                        console.error(`Failed to load profile: ${xhr.responseText}`);
+                        window.location.href = 'Login.html';
+                    }
+                });
+            }
+
+            loadProfile();
+
             $('#logoutBtn').click(function (event) {
                 event.preventDefault();
-
                 $.ajax({
                     url: '/api/users/logout',
                     method: 'POST',
                     success: function () {
-                        alert('Logged out successfully!');
                         window.location.href = 'Index.html';
                     },
                     error: function (xhr) {
                         console.error('Failed to log out:', xhr.responseText);
-                        alert('Failed to log out. Please try again.');
                         window.location.href = 'Index.html';
+                    }
+                });
+            });
+
+            $('#editBtn').click(function () {
+                $('#profileInfo').hide();
+                $('#editProfileModal').show();
+            });
+
+            $('#editProfileForm').submit(function (event) {
+                event.preventDefault();
+
+                const updatedUser = {
+                    Username: $('#editUsername').val(),
+                    Password: $('#editPassword').val(),
+                    FirstName: $('#editFirstName').val(),
+                    LastName: $('#editLastName').val(),
+                    Email: $('#editEmail').val(),
+                    DateOfBirth: $('#editDateOfBirth').val(),
+                    Gender: $('input[name="editGender"]:checked').val(),
+                };
+
+                console.log("Updated User data to be sent:", updatedUser);
+
+                $.ajax({
+                    url: '/api/users/update',
+                    method: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify(updatedUser),
+                    success: function (user) {
+                        $('#editProfileModal').hide();
+                        loadProfile();
+                    },
+                    error: function (xhr) {
+                        console.error('Failed to update profile:', xhr.responseText);
+                    }
+                });
+            });
+
+            $('#cancelEditBtn').click(function () {
+                $('#editProfileModal').hide();
+                $('#profileInfo').show();
+            });
+
+            $(".datepicker").datepicker({
+                dateFormat: 'dd/mm/yy',
+                defaultDate: new Date(2000, 0, 1)
+            });
+
+            $('#editUsername').on('blur', function () {
+                const username = $(this).val();
+                const currentUsername = $(this).attr('data-current-username');
+                if (username.length === 0 || username === currentUsername) {
+                    $('#usernameError').text('');
+                    return;
+                }
+
+                $.ajax({
+                    url: `/api/users/${username}`,
+                    method: 'GET',
+                    success: function () {
+                        if (username !== currentUsername) {
+                            $('#usernameError').text('Username already exists.');
+                        } else {
+                            $('#usernameError').text('');
+                        }
+                    },
+                    error: function (xhr) {
+                        if (xhr.status === 404) {
+                            $('#usernameError').text('');
+                        } else {
+                            $('#usernameError').text('Error checking username.');
+                        }
                     }
                 });
             });
@@ -54,14 +145,40 @@
     </div>
     <br />
     <h1 id="loadingMessage">Loading...</h1>
-    <div id="profileInfo">
-        <p id="profileTitle"></p>
+    <div id="profileInfo" style="display:none;">
+        <h1 id="profileTitle"></h1>
         <ul>
             <li id="email"></li>
             <li id="dob"></li>
             <li id="gender"></li>
             <li id="type"></li>
         </ul>
+        <button id="editBtn">Edit Profile</button>
     </div>
-</body>
+
+    <div id="editProfileModal" style="display:none;">
+        <form id="editProfileForm">
+            <label for="editUsername">Username:</label>
+            <input type="text" id="editUsername" name="editUsername" required><br>
+            <span id="usernameError" class="error" style="display:block;"></span>
+            <label for="editPassword">Password:</label>
+            <input type="password" id="editPassword" name="editPassword" required><br>
+            <label for="editFirstName">First Name:</label>
+            <input type="text" id="editFirstName" name="editFirstName" required><br>
+            <label for="editLastName">Last Name:</label>
+            <input type="text" id="editLastName" name="editLastName" required><br>
+            <label for="editEmail">Email:</label>
+            <input type="email" id="editEmail" name="editEmail" required><br>
+            <label for="editDateOfBirth">Date of Birth:</label>
+            <input type="text" id="editDateOfBirth" name="editDateOfBirth" class="datepicker" required><br>
+            <label>Gender:</label>
+            <input type="radio" id="editMale" name="editGender" value="Male">
+            <label for="editMale">Male</label>
+            <input type="radio" id="editFemale" name="editGender" value="Female">
+            <label for="editFemale">Female</label><br>
+            <button type="submit">Save changes</button>
+            <button type="button" id="cancelEditBtn">Cancel</button>
+        </form>
+    </div>
+    </body>
 </html>
