--- a/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Index.html
+++ b/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Index.html
@@ -10,9 +10,80 @@
     <script type="text/javascript">
         $(document).ready(function () {
             let flightsData = [];
+            let currentUser = null;
+            let selectedFlight = null;
 
-            loadFlights();
-            loadAirlines();
+            checkSession();
+
+            function checkSession() {
+                $.ajax({
+                    url: "/api/users/currentuser",
+                    method: "GET",
+                    success: function (user) {
+                        currentUser = user;
+                        showMenuBasedOnUser(user);
+                        loadFlights();
+                        loadAirlines();
+                    },
+                    error: function () {
+                        console.error("Error fetching user session.");
+                        showLoggedOutMenu();
+                        loadFlights();
+                        loadAirlines();
+                    }
+                });
+            }
+
+            function showMenuBasedOnUser(user) {
+                if (user) {
+                    showLoggedInMenu(user);
+                } else {
+                    showLoggedOutMenu();
+                }
+            }
+
+            function showLoggedInMenu(user) {
+                $('.menu').html(`
+                                    <a href="Index.html">Flights</a>
+                                    <a href="Profile.html">Profile</a>
+                                    <a href="#" id="logout">Log out</a>
+                                `);
+
+                $('#logout').click(function () {
+                    $.ajax({
+                        url: "/api/users/logout",
+                        method: "POST",
+                        success: function () {
+                            location.reload();
+                        },
+                        error: function () {
+                            console.error("Error logging out.");
+                        }
+                    });
+                });
+            }
+
+            function showLoggedOutMenu() {
+                $('.menu').html(`
+                                    <a href="Index.html">Flights</a>
+                                    <a href="Register.html">Register</a>
+                                    <a href="Login.html">Log in</a>
+                                `);
+            }
+
+            function loadFlights() {
+                $.ajax({
+                    url: "/api/flights",
+                    method: "GET",
+                    success: function (data) {
+                        flightsData = data;
+                        renderFlightsTable(data);
+                    },
+                    error: function () {
+                        console.error("Error fetching flights data.");
+                    }
+                });
+            }
 
             function loadAirlines() {
                 $.ajax({
@@ -43,31 +114,24 @@
                 });
             }
 
-            function loadFlights() {
-                $.ajax({
-                    url: "/api/flights",
-                    method: "GET",
-                    success: function (data) {
-                        flightsData = data;
-                        renderFlightsTable(data);
-                    },
-                    error: function () {
-                        console.error("Error fetching flights data.");
-                    }
-                });
-            }
-
             function renderFlightsTable(data) {
                 let activeFlights = data.filter(element => element.status === 'Active');
 
                 let tableOfFlights = '<table border="1">';
-                tableOfFlights += '<tr><th>Airline</th><th>From</th><th>Destination</th><th>Departure time</th><th>Arrival time</th><th>Available seats</th><th>Booked seats</th><th>Price(RSD)</th><th>Status</th></tr>';
+                if (currentUser && currentUser.userType === 'Traveler') {
+                    tableOfFlights += '<tr><th>Reserve</th><th>Airline</th><th>From</th><th>Destination</th><th>Departure time</th><th>Arrival time</th><th>Available seats</th><th>Booked seats</th><th>Price(RSD)</th><th>Status</th></tr>';
+                } else {
+                    tableOfFlights += '<tr><th>Airline</th><th>From</th><th>Destination</th><th>Departure time</th><th>Arrival time</th><th>Available seats</th><th>Booked seats</th><th>Price(RSD)</th><th>Status</th></tr>';
+                }
 
                 if (activeFlights.length === 0) {
-                    tableOfFlights += '<tr><td colspan="9" style="font-size: 18px;">No active flights</td></tr>';
+                    tableOfFlights += '<tr><td colspan="10" style="font-size: 18px;">No active flights</td></tr>';
                 } else {
                     activeFlights.forEach(function (element) {
                         let flight = '<tr>';
+                        if (currentUser && currentUser.userType === 'Traveler') {
+                            flight += `<td class="center-radio"><input type="radio" name="reserve" class="reserve-flight" data-flight='${JSON.stringify(element)}'></td>`;
+                        }
                         flight += `<td><a href="#airlines" class="airline-name" data-airline='${JSON.stringify(element.airline)}'>${element.airline.name}</a></td>`;
                         flight += '<td>' + element.from + '</td>';
                         flight += '<td>' + element.destination + '</td>';
@@ -91,14 +155,22 @@
                         scrollTop: $('#airlines').offset().top
                     }, 800);
                 });
+
+                if (currentUser && currentUser.userType === 'Traveler') {
+                    $('.reserve-flight').change(function () {
+                        selectedFlight = JSON.parse($(this).attr('data-flight'));
+                        $('#reservation-form').show();
+                        $('#reservation-error').remove();
+                    });
+                }
             }
 
             function renderAirlinesTable(data) {
                 let tableOfAirlines = '<table border="1">';
                 data.forEach(function (element) {
                     let airline = `<tr class="airline-row" data-airline='${JSON.stringify(element)}'>
-                                            <td><h2 style="margin: 0;" class = "airline-name">${element.name}</h2></td>
-                                           </tr>`;
+                                            <td><h2 style="margin: 0;" class="airline-name">${element.name}</h2></td>
+                                       </tr>`;
                     tableOfAirlines += airline;
                 });
 
@@ -112,64 +184,14 @@
                         nextRow.remove();
                     } else {
                         $(this).after(`<tr class="airline-details">
-                                                <td colspan="1">
-                                                    <p><strong>Address:</strong> ${airlineData.address}</p>
-                                                    <p><strong>Contact Info:</strong> ${airlineData.contactInfo}</p>
-                                                    <div class="reviews">
-                                                        ${renderReviews(airlineData.reviews)}
-                                                    </div>
-                                                </td>
-                                               </tr>`);
-                    }
-                });
-                $(document).ready(function () {
-                    checkSession();
-
-                    function checkSession() {
-                        $.ajax({
-                            url: "/api/users/currentuser",
-                            method: "GET",
-                            success: function (user) {
-                                if (user) {
-                                    showLoggedInMenu(user);
-                                } else {
-                                    showLoggedOutMenu();
-                                }
-                            },
-                            error: function () {
-                                console.error("Error fetching user session.");
-                                showLoggedOutMenu();
-                            }
-                        });
-                    }
-
-                    function showLoggedInMenu(user) {
-                        $('.menu').html(`
-                    <a href="Index.html">Flights</a>
-                    <a href="Profile.html">Profile</a>
-                    <a href="#" id="logout">Log out</a>
-                `);
-
-                        $('#logout').click(function () {
-                            $.ajax({
-                                url: "/api/users/logout",
-                                method: "POST",
-                                success: function () {
-                                    location.reload();
-                                },
-                                error: function () {
-                                    console.error("Error logging out.");
-                                }
-                            });
-                        });
-                    }
-
-                    function showLoggedOutMenu() {
-                        $('.menu').html(`
-                    <a href="Index.html">Flights</a>
-                    <a href="Register.html">Register</a>
-                    <a href="Login.html">Log in</a>
-                `);
+                                            <td colspan="1">
+                                                <p><strong>Address:</strong> ${airlineData.address}</p>
+                                                <p><strong>Contact Info:</strong> ${airlineData.contactInfo}</p>
+                                                <div class="reviews">
+                                                    ${renderReviews(airlineData.reviews)}
+                                                </div>
+                                            </td>
+                                           </tr>`);
                     }
                 });
             }
@@ -187,9 +209,9 @@
                 let reviewsHtml = '<h3>Reviews:</h3>';
                 approvedReviews.forEach(function (review) {
                     reviewsHtml += `<div class="review">
-                                                <p><strong>Title:</strong> ${review.title}</p>
-                                                <p>${review.content}</p>
-                                            </div>`;
+                                            <p><strong>Title:</strong> ${review.title}</p>
+                                            <p>${review.content}</p>
+                                        </div>`;
                 });
 
                 return reviewsHtml;
@@ -238,14 +260,49 @@
 
                 renderFlightsTable(filteredFlights);
             });
+
+            $('#reservation-form').submit(function (event) {
+                event.preventDefault();
+
+                let numberOfSeats = $('#numberOfSeats').val();
+                if (selectedFlight && numberOfSeats <= selectedFlight.availableSeats) {
+                    let totalPrice = numberOfSeats * selectedFlight.price;
+                    let reservation = {
+                        User: currentUser,
+                        Flight: selectedFlight,
+                        NumberOfPassengers: numberOfSeats,
+                        TotalPrice: totalPrice,
+                        Status: 'Created'
+                    };
+                    $.ajax({
+                        url: '/api/reservations',
+                        method: 'POST',
+                        contentType: 'application/json',
+                        data: JSON.stringify(reservation),
+                        success: function () {
+                            $('#reservation-form').hide();
+                            loadFlights();
+                        },
+                        error: function (xhr, status, error) {
+                        }
+                    });
+                } else {
+                    $('#reservation-error').remove();
+                    $('#reservation-form').append('<div id="reservation-error" class="error">Not enough available seats</div>');
+                }
+            });
+
+            $(function () {
+                $(".datepicker").datepicker({ dateFormat: 'yy-mm-dd' });
+            });
         });
     </script>
 </head>
 <body>
     <div class="menu">
         <a href="Index.html">Flights</a>
-        <a href="Register.html">Register</a>
-        <a href="Login.html">Log in</a>
+        <a href="Profile.html">Profile</a>
+        <a href="#" id="logout">Log out</a>
     </div>
     <br />
     <h1>Flights</h1>
@@ -273,6 +330,14 @@
     </div>
     <br />
     <div id="flights"></div>
+    <br>
+    <div id="reservation-form" style="display: none; margin-left:20px">
+        <form id="reservationForm">
+            <label for="numberOfSeats">Number of Seats:</label>
+            <input type="number" id="numberOfSeats" value="1" min="1">
+            <button type="submit" id="createReservation">Create reservation</button>
+        </form>
+    </div>
     <br />
     <h1>Airlines</h1>
     <div id="airlines"></div>
@@ -284,7 +349,7 @@
     <br />
     <script>
         $(function () {
-            $(".datepicker").datepicker({ dateFormat: 'yy-mm-dd' });
+            $(".datepicker").datepicker({ dateFormat: ' yy-mm-dd ' });
         });
     </script>
 </body>
